manifests/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    name: harbor
    type: system
